[package]
name = "viktor"
version = "0.1.0"
authors = ["Alfredo Di Napoli <alfredo.dinapoli@gmail.com>"]

[dependencies]
serde = "=0.8.19"
termcolor = "=0.1.1"
serde_derive = "=0.8.19"
serde_json = "=0.8.4"
rustc-serialize = "=0.3"
select = { git = "https://github.com/utkarshkukreti/select.rs", rev = "738ea48c670bb9001bc070b7a15831630b83e77e" }
hyper  = "=0.9.12"
lazy_static = "=0.2.2"
clap = "=2.19.0"
